--- a/pages/htmltables.html
+++ b/pages/htmltables.html
@@ -554,8 +554,8 @@
               href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics"
               target="_blank"
               rel="noopener noreferrer"
-            ></a
-            >MDN Table Basics
+              >MDN Table Basics</a
+            >
           </li>
           <li>
             <a
